apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:29
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: nextcloud-config
              mountPath: /var/www/html/config
            - name: nextcloud-apps
              mountPath: /var/www/html/custom_apps
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-apps
          persistentVolumeClaim:
            claimName: nextcloud-apps
