apps/nextcloud/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
